quartus: updated to use the resources submodule

--- a/quartus/Makefile
+++ b/quartus/Makefile
@@ -1,10 +1,10 @@
 #!/usr/bin/make
 
-COMMAND="quartus_sh --script"
+COMMAND=quartus_sh --script
 
 flow params:
 	$(COMMAND) $@.tcl
 
 clean:
-	rm -fr *.rpt *.done *.summary *.jdi *.pin *.qpf *.qsf *.sld *.sof db \
-	incremental_db
+	rm -fr *.rpt *.done *.summary *.jdi *.pin *.qpf *.qsf *.sld *.sof db incremental_db
+	rm -fr *.html *.log *.txt *.xml
