vivado: updated to use the resources submodule

--- a/vivado/Makefile
+++ b/vivado/Makefile
@@ -1,10 +1,10 @@
 #!/usr/bin/make
 
-COMMAND="vivado -mode batch -notrace -quiet -source"
+COMMAND=vivado -mode batch -notrace -quiet -source
 
 flow params:
 	$(COMMAND) $@.tcl
 
 clean:
 	rm -fr *.bit *.cache *.hw *.runs *.xpr *.jou *.ip_user_files
-	rm -fr *.html *.log *.txt *.xml
+	rm -fr *.html *.log *.txt *.xml .Xil
