ise, vivado: added the 'version' target

--- a/ise/Makefile
+++ b/ise/Makefile
@@ -5,6 +5,9 @@ COMMAND=xtclsh
 flow params:
 	$(COMMAND) $@.tcl
 
+version:
+	echo "puts \$$tcl_version" | xtclsh
+
 clean:
 	rm -fr \
 	*.bgn *.bit *.bld *.cmd_log *.drc *.lso *.ncd *.ngc *.ngd *.ngr      \
