--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "resources"]
 	path = resources
-	url = https://github.com/PyFPGA/resources
+	url = https://github.com/PyFPGA/resources.git
