vivado: fixed Verilog example after changes into resources

--- a/vivado/Makefile
+++ b/vivado/Makefile
@@ -12,4 +12,4 @@ version:
 
 clean:
 	rm -fr *.bit *.cache *.hw *.runs *.xpr *.jou *.ip_user_files
-	rm -fr *.html *.log *.txt *.xml .Xil
+	rm -fr *.html *.log *.txt *.xml .Xil *.zip
