openflow: removed ghdl.sh and yosys.sh
Similar examples are now at ghdl and yosys directories.

--- a/openflow/Makefile
+++ b/openflow/Makefile
@@ -4,7 +4,7 @@ DOCKER_CMD=docker run --rm -it -v $$HOME:$$HOME -w $$PWD ghdl/synth:beta
 
 COMMAND=bash
 
-flow ghdl mix params yosys:
+flow mix:
 	$(COMMAND) $@.sh
 
 clean:
